authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  labels:
    app: authservice
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      serviceAccountName: authservice
      containers:
        - name: authservice
          image: authservice:latest-arm64 
          imagePullPolicy: Never 
          ports:
            - name: authz
              containerPort: 10003
              protocol: TCP
            - name: health
              containerPort: 10004
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/authservice
      volumes:
        - name: config
          configMap:
            name: authservice-config
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  ports:
    - name: grpc
      port: 10003
      targetPort: 10003
      protocol: TCP
    - port: 10004
      targetPort: 10004
      name: grpc-health
      protocol: TCP
  selector:
    app: authservice

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authservice
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/my-gateway
  http:
    - match:
        - uri:
            prefix: /authservice
        - uri:
            prefix: /callback
      route:
        - destination:
            host: authservice
            port:
              number: 10003
