auth-intercept.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: custom-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway 
  action: CUSTOM
  provider:
    name: authservice-grpc
  rules:
    - {}
